--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <main>
       <div id="container-article-aside">
-        <h3>Sobre mim</h3>
+        <h2>Sobre mim</h2>
         <article class="lado-esquerdo">
           <p>
             Estas são algumas das mensagens que levo comigo,<br> 1 - Alegria é um sentimento momentâneo, Felicidade é equilíbrio de espírito;<br> 2 - Seu problema tem solução? Sim, então não tem com o que se preocupar. Seu problema tem solução? Não, então também não tem o por que se preocupar.<br> 3 - Último e mais importante, faça o que te faz feliz, foda-se o resto rs.
@@ -27,7 +27,7 @@
       </div>
       <section id="licoes">
         <div class="licoes-aprendidas">
-          <h2>Lições Aprendidas</h2>
+          <h3>Lições Aprendidas</h3>
           <ol id="licoes_aprendidas">
             <li>Soft Skills</li>
             <li>Colaboração</li>
@@ -42,7 +42,7 @@
           </ol>
         </div>
         <div class="licoes-a-aprender">
-          <h2>Lições a Aprender</h2>
+          <h3>Lições a Aprender</h3>
           <ul id="licoes_a_aprender">
             <li>React</li>
             <li>Node</li>
@@ -58,7 +58,7 @@
         </div>
       </section>
       <section id="tabela">
-        <h5>Inventores</h5>
+        <h4>Inventores</h4>
         <table>
           <tr>
             <th>Nome</th>
@@ -86,9 +86,9 @@
     <footer id="rodape">
       <nav>
         <p>© Matheus Schreiner</p>
-        <a href="https://github.com/MatheusSchreiner" target="_blank"><img class="icons"src="https://cdn.jsdelivr.net/npm/simple-icons@3.0.1/icons/github.svg" alt="Git Hub"></a>
-        <a href="https://www.betrybe.com/" target="_blank"><img id="icon-trybe" class="icons" src="https://uploads-ssl.webflow.com/5fba98ad987231cf0efa3d58/5fba9c9a93a2e77624258d49_Logo.svg" alt="Trybe"></a>
-        <a href="https://www.linkedin.com/in/matheus-schreiner-7732a61bb/" target="_blank"><img class="icons"src="https://cdn.jsdelivr.net/npm/simple-icons@3.0.1/icons/linkedin.svg" alt="Linkedin"></a>
+        <a href="https://github.com/MatheusSchreiner" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@3.0.1/icons/github.svg" alt="Git Hub" class="icons"></a>
+        <a href="https://www.betrybe.com/" target="_blank"><img src="https://uploads-ssl.webflow.com/5fba98ad987231cf0efa3d58/5fba9c9a93a2e77624258d49_Logo.svg" alt="Trybe" id="icon-trybe" class="icons"></a>
+        <a href="https://www.linkedin.com/in/matheus-schreiner-7732a61bb/" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@3.0.1/icons/linkedin.svg" alt="Linkedin" class="icons"></a>
       </nav>
     </footer>
   </body>
