--- a/index.html
+++ b/index.html
@@ -1,101 +1,114 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lições aprendidas Trybe</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
+  <body>
     <header id="cabecalho">
+      <div>
         <div>
-            <div>
-                <h1 id="titulo">Projeto desenvolvimento</h1>
-            </div>
+          <h1 id="titulo">Projeto desenvolvimento</h1>
         </div>
-        <div>
-            <nav class="navegacao">
-                <a href="#header">Home</a>
-                <a target="_blank" href="https://linkedin.com/in/pedrotoselli">Linkedin</a>
-            </nav>
-        </div>
+      </div>
+      <div>
+        <nav class="navegacao">
+          <a href="#header">Home</a>
+          <a target="_blank" href="https://linkedin.com/in/pedrotoselli"
+            >Linkedin</a
+          >
+        </nav>
+      </div>
     </header>
     <main>
-        <div>
-            <img id="minha_foto" src="imagens/toselli.jpg" width="160px" alt="Foto de Pedro Toselli">
-        </div>
-        <div class="tabela">
-            <table>
-                <tr>
-                    <td>Nome</td>
-                    <td>Idade</td>
-                    <td>Profissão</td>
-                </tr>
-                <tr>
-                    <td>Pedro</td>
-                    <td>20</td>
-                    <td>Estudante</td>
-                </tr>
-            </table>
-        </div>
+      <div>
+        <img
+          id="minha_foto"
+          src="imagens/toselli.jpg"
+          width="160px"
+          alt="Foto de Pedro Toselli"
+        />
+      </div>
+      <div class="tabela">
+        <table>
+          <tr>
+            <td>Nome</td>
+            <td>Idade</td>
+            <td>Profissão</td>
+          </tr>
+          <tr>
+            <td>Pedro</td>
+            <td>20</td>
+            <td>Estudante</td>
+          </tr>
+        </table>
+      </div>
     </main>
     <div class="listas">
-        <h2>Lições aprendidas</h2>
-        <div class="lista-ordenada">
-            <ol id="licoes_aprendidas">
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>Unix</li>
-                <li>Bash</li>
-                <li>Linkedin</li>
-                <li>Git</li>
-                <li>GitHub</li>
-                <li>Semântica</li>
-                <li>Outline</li>
-                <li>IE</li>
-            </ol>
-        </div>
-        <div>
-            <h3>Lições a aprender</h3>
-        </div>
-        <div class="lista-desordenada">
-            <ul id="licoes_a_aprender">
-                <li>Mover itens em CSS</li>
-                <li>Python</li>
-                <li>Java Script</li>
-                <li>Mais sobre HTML</li>
-                <li>Mais sobre CSS</li>
-                <li>Programação de jogos</li>
-                <li>Fazer miojo</li>
-                <li>Alinhar itens lado a lado</li>
-                <li>Design web</li>
-                <li>Como nao ficar triste</li>
-            </ul>
-        </div>
+      <h2>Lições aprendidas</h2>
+      <div class="lista-ordenada">
+        <ol id="licoes_aprendidas">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>Unix</li>
+          <li>Bash</li>
+          <li>Linkedin</li>
+          <li>Git</li>
+          <li>GitHub</li>
+          <li>Semântica</li>
+          <li>Outline</li>
+          <li>IE</li>
+        </ol>
+      </div>
+      <div>
+        <h3>Lições a aprender</h3>
+      </div>
+      <div class="lista-desordenada">
+        <ul id="licoes_a_aprender">
+          <li>Mover itens em CSS</li>
+          <li>Python</li>
+          <li>Java Script</li>
+          <li>Mais sobre HTML</li>
+          <li>Mais sobre CSS</li>
+          <li>Programação de jogos</li>
+          <li>Fazer miojo</li>
+          <li>Alinhar itens lado a lado</li>
+          <li>Design web</li>
+          <li>Como nao ficar triste</li>
+        </ul>
+      </div>
     </div>
     <section class="artigo">
-        <article>
-            <div class="aprendizado">
-                <h4>Meu aprendizado ate aqui</h4>
-                <p>Sei que estou no começo ainda, e sei também que já aprendi mais do que semana passada, <br> mas ainda
-                    fico chateado em saber que ainda nao consigo nem sequer alinhar uma coluna lado a lado, enquanto
-                    meus colegas ja fizeram templates absurdos. <br> O que mais me deixa feliz é que estou tendo a
-                    oportunidade de melhorar sempre.</p>
-            </div>
-        </article>
-        <aside>
-            <div class="caminhada">
-                <h5>Meu trajeto até aqui</h5>
-                <p>Bom, esse é literalmente meu primeiro contato com a programação, estou gostando muito, porem fico
-                    chateado quando nao consigo algo simples. Mas no fim tudo da certo.</p>
-            </div>
-        </aside>
+      <article>
+        <div class="aprendizado">
+          <h4>Meu aprendizado ate aqui</h4>
+          <p>
+            Sei que estou no começo ainda, e sei também que já aprendi mais do
+            que semana passada, <br />
+            mas ainda fico chateado em saber que ainda nao consigo nem sequer
+            alinhar uma coluna lado a lado, enquanto meus colegas ja fizeram
+            templates absurdos. <br />
+            O que mais me deixa feliz é que estou tendo a oportunidade de
+            melhorar sempre.
+          </p>
+        </div>
+      </article>
+      <aside>
+        <div class="caminhada">
+          <h5>Meu trajeto até aqui</h5>
+          <p>
+            Bom, esse é literalmente meu primeiro contato com a programação,
+            estou gostando muito, porem fico chateado quando nao consigo algo
+            simples. Mas no fim tudo da certo.
+          </p>
+        </div>
+      </aside>
     </section>
     <footer id="rodape">
-        <p id="dev-name">Este site foi criado e desenvolvido por Pedro Toselli</p>
+      <p id="dev-name">Este site foi criado e desenvolvido por Pedro Toselli</p>
     </footer>
-</body>
-
+  </body>
 </html>
