--- a/index.html
+++ b/index.html
@@ -9,5 +9,22 @@
         <header id="cabecalho">
             <h1 id="titulo">Lições aprendidas - TRYBE</h1>
         </header>
+        <aside>
+            <img src="images/profile-picture.jpg" alt="Foto de Julio H. Thosi" id="minha_foto" width="150px">
+        <section id="lessons">
+            <ol id="lessons-learned">
+                <li>Unix</li>
+                <li>Bash</li>
+                <li>Shell</li>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>Internet</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Seletores e Posicionamento</li>
+                <li>HTML Semântico</li>
+            </ol>
+        </section>
+        </aside>
     </body>
 </html>
