--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
                 <li>Seletores e Posicionamento</li>
                 <li>HTML Semântico</li>
             </ol>
+            <ul id="lessons-to-learn">
+                <li>Javascript</li>
+                <li>Array e Loop For</li>
+                <li>Logica de Programacao e Algoritmos</li>
+                <li>Objetos e Funções</li>
+                <li>DOM e seletores</li>
+                <li>Elementos JS</li>
+                <li>Eventos JS</li>
+                <li>Web Storage</li>
+                <li>CSS FlexBox</li>
+                <li>CSS Responsivo</li>
+            </ul>
         </section>
     </body>
 </html>
