--- a/index.html
+++ b/index.html
@@ -38,5 +38,8 @@
                 <li>CSS Responsivo</li>
             </ul>
         </section>
+        <footer id="rodape">
+
+        </footer>
     </body>
 </html>
