--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>Lições aprendidas - TRYBE</title>
     </head>
     <body>
@@ -39,7 +40,20 @@
             </ul>
         </section>
         <footer id="rodape">
-
+            <div id="social-logo">
+                <a target="_blank" href="https://www.linkedin.com/in/thosijulio">
+                    <i class="fa fa-linkedin">
+                    </i>
+                </a>
+                <a target="_blank" href="https://www.linkedin.com/in/thosijulio">
+                    <i class="fa fa-github">
+                    </i>
+                </a>
+                <a target="_blank" href="https://www.linkedin.com/in/thosijulio">
+                    <i class="fa fa-instagram">
+                    </i>
+                </a>
+            </div>
         </footer>
     </body>
 </html>
