--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
         <header id="cabecalho">
             <h1 id="titulo">Lições aprendidas - TRYBE</h1>
         </header>
-        <aside>
+        <aside id="side-content">
             <img src="images/profile-picture.jpg" alt="Foto de Julio H. Thosi" id="minha_foto" width="150px">
         </aside>
+       <article>
+           <h3>Minha história na Trybe</h3>
+           <p>Comecei os estudos no dia 09/11/2020. Enquanto escrevo esse parágrafo, se passaram um mês e meio. De lá pra cá, aprendi coisas que sequer imaginaria possíveis aprender em tão pouco tempo. Aprendi a mexer com linux (que sempre tive interesse, mas nunca conseguia entrar de cabeça), também aprendi a mexer com HTML e CSS (linguagem que eu nunca havia trabalhado), e também revi conteúdos sobre JavaScript e linguagem de programação.</p>
+       </article>
+       <aside>
+           <h3>Uma passagem sobre meu aprendizado</h3>
+           <p>Quando estavamos estudando sobre HTML & CSS, não consegui entender de primeira o conteúdo de seletores e posicionamento, em parte porque tive problemas para acompanhar o conteúdo no dia, e depois ficou um pouco difícil de rever enquanto tinha outras aulas em andamento. Agora, durante as férias do curso, resolvi me dedicar em aprender esse conteúdo, e pude rever a aula ao vivo e todo o conteúdo pré-aula, que fez eu me sentir confiante em relação ao que pude absorver, e principalmente, pronto para seguir em frente.</p>
+       </aside> 
         <section id="lessons">
             <ol id="lessons-learned">
                 <li>Unix</li>
