--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <header id="cabecalho">
             <h1 id="titulo">Lições aprendidas - TRYBE</h1>
         </header>
-        <aside id="side-content">
+        <aside id="conteudo_lateral">
             <img src="images/profile-picture.jpg" alt="Foto de Julio H. Thosi" id="minha_foto" width="150px">
         </aside>
        <article>
@@ -21,8 +21,8 @@
            <h3>Uma passagem sobre meu aprendizado</h3>
            <p>Quando estavamos estudando sobre HTML & CSS, não consegui entender de primeira o conteúdo de seletores e posicionamento, em parte porque tive problemas para acompanhar o conteúdo no dia, e depois ficou um pouco difícil de rever enquanto tinha outras aulas em andamento. Agora, durante as férias do curso, resolvi me dedicar em aprender esse conteúdo, e pude rever a aula ao vivo e todo o conteúdo pré-aula, que fez eu me sentir confiante em relação ao que pude absorver, e principalmente, pronto para seguir em frente.</p>
        </aside> 
-        <section id="lessons">
-            <ol id="lessons-learned">
+        <section id="licoes">
+            <ol id="licoes_aprendidas">
                 <li>Unix</li>
                 <li>Bash</li>
                 <li>Shell</li>
@@ -34,7 +34,7 @@
                 <li>Seletores e Posicionamento</li>
                 <li>HTML Semântico</li>
             </ol>
-            <ul id="lessons-to-learn">
+            <ul id="licoes_a_aprender">
                 <li>Javascript</li>
                 <li>Array e Loop For</li>
                 <li>Logica de Programacao e Algoritmos</li>
@@ -48,7 +48,7 @@
             </ul>
         </section>
         <footer id="rodape">
-            <div id="social-logo">
+            <div id="logos_rede_social">
                 <a target="_blank" href="https://www.linkedin.com/in/thosijulio">
                     <i class="fa fa-linkedin">
                     </i>
