--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
        <aside>
            <p>Quando estavamos estudando sobre HTML & CSS, não consegui entender de primeira o conteúdo de seletores e posicionamento, em parte porque tive problemas para acompanhar o conteúdo no dia. Agora, pude revisitar esse conteúdo, e consegui aprender de maneira satisfatória.</p>
        </aside> 
+       <aside id="conteudo_lateral">
+        <img src="images/profile-picture.jpg" alt="Foto de Julio H. Thosi" id="minha_foto" width="150px">
+    </aside>
         <section id="licoes">
             <ol id="licoes_aprendidas">
                 <li>Unix</li>
