--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <header id="cabecalho">
             <h1 id="titulo">Lições aprendidas - TRYBE</h1>
         </header>
+        <section id="conteudo_lateral">
+            <img src="images/profile-picture.jpg" alt="Foto de Julio H. Thosi" id="minha_foto" width="150px">
+        </section>
        <article>
            <h3>Minha história na Trybe</h3>
            <p>Comecei os estudos no dia 09/11/2020. Enquanto escrevo esse parágrafo, se passaram um mês e meio. De lá pra cá, aprendi coisas que sequer imaginaria possíveis aprender em tão pouco tempo. Aprendi a mexer com linux (que sempre tive interesse, mas nunca conseguia entrar de cabeça), também aprendi a mexer com HTML e CSS (linguagem que eu nunca havia trabalhado), e também revi conteúdos sobre JavaScript e linguagem de programação.</p>
@@ -17,9 +20,6 @@
        <aside>
            <p>Quando estavamos estudando sobre HTML & CSS, não consegui entender de primeira o conteúdo de seletores e posicionamento, em parte porque tive problemas para acompanhar o conteúdo no dia. Agora, pude revisitar esse conteúdo, e consegui aprender de maneira satisfatória.</p>
        </aside> 
-       <aside id="conteudo_lateral">
-        <img src="images/profile-picture.jpg" alt="Foto de Julio H. Thosi" id="minha_foto" width="150px">
-    </aside>
         <section id="licoes">
             <ol id="licoes_aprendidas">
                 <li>Unix</li>
