--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <body>
         <header id="cabecalho">
             <h1 id="titulo">Lições aprendidas - TRYBE</h1>
+            <nav>
+                <h3>Índice</h3>
+                <ul>
+                    <li>Menu</li>
+                    <li>Menu</li>
+                    <li>Menu</li>
+                    <li>Menu</li>
+                </ul>
+            </nav>
         </header>
         <section id="conteudo_lateral">
             <img src="images/profile-picture.jpg" alt="Foto de Julio H. Thosi" id="minha_foto" width="150px">
