--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
         </header>
         <section id="conteudo_lateral">
             <img src="images/profile-picture.jpg" alt="Foto de Julio H. Thosi" id="minha_foto" width="150px">
+            <table>
+                <tr>
+                    <th>Nome Completo</th>
+                    <td>Julio Henrique Thosi</td>
+                </tr>
+            </table>
         </section>
        <article>
            <h3>Minha história na Trybe</h3>
@@ -62,11 +68,11 @@
                     <i class="fa fa-linkedin">
                     </i>
                 </a>
-                <a target="_blank" href="https://www.linkedin.com/in/thosijulio">
+                <a target="_blank" href="https://www.github.com/thosijulio">
                     <i class="fa fa-github">
                     </i>
                 </a>
-                <a target="_blank" href="https://www.linkedin.com/in/thosijulio">
+                <a target="_blank" href="https://www.instagram.com/thosijulio">
                     <i class="fa fa-instagram">
                     </i>
                 </a>
