--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
         <title>Lições aprendidas - TRYBE</title>
     </head>
     <body>
@@ -20,24 +22,33 @@
             </nav>
         </header>
         <section id="conteudo_lateral">
+            <div id="borda-informacoes">
+            <h3> Julio H. Thosi</h3>
             <img src="images/profile-picture.jpg" alt="Foto de Julio H. Thosi" id="minha_foto" width="150px">
+            <h3>Informações</h3>
             <table>
                 <tr>
                     <th>Nome Completo</th>
                     <td>Julio Henrique Thosi</td>
                 </tr>
+                <tr>
+                    <th>Nascimento</th>
+                    <td>22 de julho de 1996</td>
+                </tr>
+                <tr>
+                    <th>Local de nascimento</th>
+                    <td>Ribeirão Preto-SP, Brasil</td>
+                </tr>
+                <tr>
+                    <th>Moradia atual</th>
+                    <td>Bauru-SP, Brasil</td>
+                </tr>
             </table>
+            </div>
         </section>
-       <article>
-           <h3>Minha história na Trybe</h3>
-           <p>Comecei os estudos no dia 09/11/2020. Enquanto escrevo esse parágrafo, se passaram um mês e meio. De lá pra cá, aprendi coisas que sequer imaginaria possíveis aprender em tão pouco tempo. Aprendi a mexer com linux (que sempre tive interesse, mas nunca conseguia entrar de cabeça), também aprendi a mexer com HTML e CSS (linguagem que eu nunca havia trabalhado), e também revi conteúdos sobre JavaScript e linguagem de programação.</p>
-       </article>
-       <aside>
-           <h3>Uma passagem sobre meu aprendizado</h3>
-           <p>Quando estavamos estudando sobre HTML & CSS, não consegui entender de primeira o conteúdo de seletores e posicionamento, em parte porque tive problemas para acompanhar o conteúdo no dia. Agora, pude revisitar esse conteúdo, e consegui aprender de maneira satisfatória.</p>
-       </aside> 
         <section id="licoes">
             <ol id="licoes_aprendidas">
+                <h3>Conteúdo aprendido</h3>
                 <li>Unix</li>
                 <li>Bash</li>
                 <li>Shell</li>
@@ -46,13 +57,14 @@
                 <li>Internet</li>
                 <li>HTML</li>
                 <li>CSS</li>
-                <li>Seletores e Posicionamento</li>
+                <li>CSS Posicionamento</li>
                 <li>HTML Semântico</li>
             </ol>
             <ul id="licoes_a_aprender">
+                <h3>Conteúdo a aprender</h3>
                 <li>Javascript</li>
                 <li>Array e Loop For</li>
-                <li>Logica de Programacao e Algoritmos</li>
+                <li>Logica de Programacao</li>
                 <li>Objetos e Funções</li>
                 <li>DOM e seletores</li>
                 <li>Elementos JS</li>
@@ -62,7 +74,18 @@
                 <li>CSS Responsivo</li>
             </ul>
         </section>
+        <div id="historias">
+            <article class="lado-esquerdo">
+                <h3>Minha história na Trybe</h3>
+                <p>Comecei os estudos no dia 09/11/2020. Enquanto escrevo esse parágrafo, se passaram um mês e meio. De lá pra cá, aprendi coisas que sequer imaginaria possíveis aprender em tão pouco tempo. Aprendi a mexer com linux (que sempre tive interesse, mas nunca conseguia entrar de cabeça), também aprendi a mexer com HTML e CSS (linguagem que eu nunca havia trabalhado), e também revi conteúdos sobre JavaScript e linguagem de programação.</p>
+            </article>
+            <aside class="lado-direito">
+                <h3>Uma passagem sobre meu aprendizado</h3>
+                <p>Quando estavamos estudando sobre HTML & CSS, não consegui entender de primeira o conteúdo de seletores e posicionamento, em parte porque tive problemas para acompanhar o conteúdo no dia. Agora, pude revisitar esse conteúdo, e consegui aprender de maneira satisfatória.</p>
+            </aside>
+        </div>
         <footer id="rodape">
+            <h5 id="siga">SIGA ME</h5>
             <div id="logos_rede_social">
                 <a target="_blank" href="https://www.linkedin.com/in/thosijulio">
                     <i class="fa fa-linkedin">
@@ -76,6 +99,7 @@
                     <i class="fa fa-instagram">
                     </i>
                 </a>
+                <p id="direitos">Todos os direitos reservados, Julio</p>
             </div>
         </footer>
     </body>
