--- a/index.html
+++ b/index.html
@@ -74,15 +74,17 @@
                 <li>CSS Responsivo</li>
             </ul>
         </section>
-        <div id="historias">
-            <article class="lado-esquerdo">
-                <h3>Minha história na Trybe</h3>
-                <p>Comecei os estudos no dia 09/11/2020. Enquanto escrevo esse parágrafo, se passaram um mês e meio. De lá pra cá, aprendi coisas que sequer imaginaria possíveis aprender em tão pouco tempo. Aprendi a mexer com linux (que sempre tive interesse, mas nunca conseguia entrar de cabeça), também aprendi a mexer com HTML e CSS (linguagem que eu nunca havia trabalhado), e também revi conteúdos sobre JavaScript e linguagem de programação.</p>
-            </article>
-            <aside class="lado-direito">
-                <h3>Uma passagem sobre meu aprendizado</h3>
-                <p>Quando estavamos estudando sobre HTML & CSS, não consegui entender de primeira o conteúdo de seletores e posicionamento, em parte porque tive problemas para acompanhar o conteúdo no dia. Agora, pude revisitar esse conteúdo, e consegui aprender de maneira satisfatória.</p>
-            </aside>
+        <div class="separando-sessoes">
+        </div>
+        <article class="lado-esquerdo">
+            <h3>Minha história na Trybe</h3>
+            <p>Comecei os estudos no dia 09/11/2020. Enquanto escrevo esse parágrafo, se passaram um mês e meio. De lá pra cá, aprendi coisas que sequer imaginaria possíveis aprender em tão pouco tempo. Aprendi a mexer com linux (que sempre tive interesse, mas nunca conseguia entrar de cabeça), também aprendi a mexer com HTML e CSS (linguagem que eu nunca havia trabalhado), e também revi conteúdos sobre JavaScript e linguagem de programação.</p>
+        </article>
+        <aside class="lado-direito">
+            <h3>Uma passagem sobre meu aprendizado</h3>
+            <p>Quando estavamos estudando sobre HTML & CSS, não consegui entender de primeira o conteúdo de seletores e posicionamento, em parte porque tive problemas para acompanhar o conteúdo no dia. Agora, pude revisitar esse conteúdo, e consegui aprender de maneira satisfatória.</p>
+        </aside>
+        <div class="separando-sessoes">
         </div>
         <footer id="rodape">
             <h5 id="siga">SIGA ME</h5>
