finalizando requisitos bonus

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <body>
         <header id="cabecalho">
             <h1 id="titulo">Lições aprendidas - TRYBE</h1>
+            <h2 id="index">Índice</h2>
             <nav>
-                <h3>Índice</h3>
                 <ul>
                     <li>Menu</li>
                     <li>Menu</li>
@@ -46,34 +46,33 @@
             </table>
             </div>
         </section>
-        <section id="licoes">
-            <ol id="licoes_aprendidas">
-                <h3>Conteúdo aprendido</h3>
-                <li>Unix</li>
-                <li>Bash</li>
-                <li>Shell</li>
-                <li>Git</li>
-                <li>GitHub</li>
-                <li>Internet</li>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>CSS Posicionamento</li>
-                <li>HTML Semântico</li>
-            </ol>
-            <ul id="licoes_a_aprender">
-                <h3>Conteúdo a aprender</h3>
-                <li>Javascript</li>
-                <li>Array e Loop For</li>
-                <li>Logica de Programacao</li>
-                <li>Objetos e Funções</li>
-                <li>DOM e seletores</li>
-                <li>Elementos JS</li>
-                <li>Eventos JS</li>
-                <li>Web Storage</li>
-                <li>CSS FlexBox</li>
-                <li>CSS Responsivo</li>
-            </ul>
-        </section>
+        <ol id="licoes_aprendidas">
+            <h3>Conteúdo aprendido</h3>
+            <li>Unix</li>
+            <li>Bash</li>
+            <li>Shell</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>Internet</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>CSS Posicionamento</li>
+            <li>HTML Semântico</li>
+        </ol>
+        <ul id="licoes_a_aprender">
+            <h3>Conteúdo a aprender</h3>
+            <li>Javascript</li>
+            <li>Array e Loop For</li>
+            <li>Logica de Programacao</li>
+            <li>Objetos e Funções</li>
+            <li>DOM e seletores</li>
+            <li>Elementos JS</li>
+            <li>Eventos JS</li>
+            <li>Web Storage</li>
+            <li>CSS FlexBox</li>
+            <li>CSS Responsivo</li>
+        </ul>
+    </section>
         <div class="separando-sessoes">
         </div>
         <article class="lado-esquerdo">
@@ -90,16 +89,16 @@
             <h5 id="siga">SIGA ME</h5>
             <div id="logos_rede_social">
                 <a target="_blank" href="https://www.linkedin.com/in/thosijulio">
-                    <i class="fa fa-linkedin">
-                    </i>
+                    <em class="fa fa-linkedin">
+                    </em>
                 </a>
                 <a target="_blank" href="https://www.github.com/thosijulio">
-                    <i class="fa fa-github">
-                    </i>
+                    <em class="fa fa-github">
+                    </em>
                 </a>
                 <a target="_blank" href="https://www.instagram.com/thosijulio">
-                    <i class="fa fa-instagram">
-                    </i>
+                    <em class="fa fa-instagram">
+                    </em>
                 </a>
                 <p id="direitos">Todos os direitos reservados, Julio</p>
             </div>
