modificações no projeto

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </ul>
         <div id="borda-informacoes">
             <h3> Julio H. Thosi</h3>
-            <img src="images/profile-picture.jpg" alt="Foto de Julio H. Thosi" id="minha_foto" width="150px">
+            <img src="images/profile-picture.jpeg" alt="Foto de Julio H. Thosi" id="minha_foto" width="150px">
             <h3>Informações</h3>
             <table>
                 <tr>
