--- a/index.html
+++ b/index.html
@@ -21,14 +21,38 @@
                 </ul>
             </nav>
         </header>
+        <div id="borda-informacoes">
+            <h3> Julio H. Thosi</h3>
+            <img src="images/profile-picture.jpeg" alt="Foto de Julio H. Thosi" id="minha_foto" width="150px">
+            <h3>Informações</h3>
+            <table>
+                <tr>
+                    <th>Nome Completo</th>
+                    <td>Julio Henrique Thosi</td>
+                </tr>
+                <tr>
+                    <th>Nascimento</th>
+                    <td>22 de julho de 1996</td>
+                </tr>
+                <tr>
+                    <th>Local de nascimento</th>
+                    <td>Ribeirão Preto-SP, Brasil</td>
+                </tr>
+                <tr>
+                    <th>Moradia atual</th>
+                    <td>Bauru-SP, Brasil</td>
+                </tr>
+            </table>
+        </div>
         <article class="lado-esquerdo">
-            <h3>Minha história na Trybe</h3>
+            <h2>Minha história na Trybe</h2>
             <p>Comecei os estudos no dia 09/11/2020. Enquanto escrevo esse parágrafo, se passaram um mês e meio. De lá pra cá, aprendi coisas que sequer imaginaria possíveis aprender em tão pouco tempo. Aprendi a mexer com linux (que sempre tive interesse, mas nunca conseguia entrar de cabeça), também aprendi a mexer com HTML e CSS (linguagem que eu nunca havia trabalhado), e também revi conteúdos sobre JavaScript e linguagem de programação.</p>
         </article>
         <aside class="lado-direito">
-            <h3>Uma passagem sobre meu aprendizado</h3>
+            <h2>Uma passagem sobre meu aprendizado</h2>
             <p>Quando estavamos estudando sobre HTML & CSS, não consegui entender de primeira o conteúdo de seletores e posicionamento, em parte porque tive problemas para acompanhar o conteúdo no dia. Agora, pude revisitar esse conteúdo, e consegui aprender de maneira satisfatória.</p>
         </aside>
+        <section id="tabelas">
         <ol id="licoes_aprendidas">
             <h3>Conteúdo aprendido</h3>
             <li>Unix</li>
@@ -55,29 +79,7 @@
             <li>CSS FlexBox</li>
             <li>CSS Responsivo</li>
         </ul>
-        <div id="borda-informacoes">
-            <h3> Julio H. Thosi</h3>
-            <img src="images/profile-picture.jpeg" alt="Foto de Julio H. Thosi" id="minha_foto" width="150px">
-            <h3>Informações</h3>
-            <table>
-                <tr>
-                    <th>Nome Completo</th>
-                    <td>Julio Henrique Thosi</td>
-                </tr>
-                <tr>
-                    <th>Nascimento</th>
-                    <td>22 de julho de 1996</td>
-                </tr>
-                <tr>
-                    <th>Local de nascimento</th>
-                    <td>Ribeirão Preto-SP, Brasil</td>
-                </tr>
-                <tr>
-                    <th>Moradia atual</th>
-                    <td>Bauru-SP, Brasil</td>
-                </tr>
-            </table>
-        </div>
+    </section>
         <footer id="rodape">
             <h5 id="siga">SIGA ME</h5>
             <div id="logos_rede_social">
