--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header id="cabecalho">
             <h1 id="titulo">Lições aprendidas - TRYBE</h1>
             <h2 id="index">Índice</h2>
-            <nav>
+            <nav id="menu-navegacao">
                 <ul>
                     <li>Menu</li>
                     <li>Menu</li>
@@ -21,7 +21,15 @@
                 </ul>
             </nav>
         </header>
-        <div id="borda-informacoes">
+        <h2>Uma passagem</h2>
+        <aside class="lado-direito">
+            <p>Quando estavamos estudando sobre HTML & CSS, não consegui entender de primeira o conteúdo de seletores e posicionamento, em parte porque tive problemas para acompanhar o conteúdo no dia. Agora, pude revisitar esse conteúdo, e consegui aprender de maneira satisfatória.</p>
+        </aside>
+        <article class="lado-esquerdo">
+            <h2>Minha história na Trybe</h2>
+            <p>Comecei os estudos no dia 09/11/2020. Enquanto escrevo esse parágrafo, se passaram um mês e meio. De lá pra cá, aprendi coisas que sequer imaginaria possíveis aprender em tão pouco tempo. Aprendi a mexer com linux (que sempre tive interesse, mas nunca conseguia entrar de cabeça), também aprendi a mexer com HTML e CSS (linguagem que eu nunca havia trabalhado), e também revi conteúdos sobre JavaScript e linguagem de programação.</p>
+        </article>
+        <div id="informacoes">
             <h3> Julio H. Thosi</h3>
             <img src="images/profile-picture.jpeg" alt="Foto de Julio H. Thosi" id="minha_foto" width="150px">
             <h3>Informações</h3>
@@ -44,14 +52,6 @@
                 </tr>
             </table>
         </div>
-        <article class="lado-esquerdo">
-            <h2>Minha história na Trybe</h2>
-            <p>Comecei os estudos no dia 09/11/2020. Enquanto escrevo esse parágrafo, se passaram um mês e meio. De lá pra cá, aprendi coisas que sequer imaginaria possíveis aprender em tão pouco tempo. Aprendi a mexer com linux (que sempre tive interesse, mas nunca conseguia entrar de cabeça), também aprendi a mexer com HTML e CSS (linguagem que eu nunca havia trabalhado), e também revi conteúdos sobre JavaScript e linguagem de programação.</p>
-        </article>
-        <aside class="lado-direito">
-            <h2>Uma passagem sobre meu aprendizado</h2>
-            <p>Quando estavamos estudando sobre HTML & CSS, não consegui entender de primeira o conteúdo de seletores e posicionamento, em parte porque tive problemas para acompanhar o conteúdo no dia. Agora, pude revisitar esse conteúdo, e consegui aprender de maneira satisfatória.</p>
-        </aside>
         <section id="tabelas">
         <ol id="licoes_aprendidas">
             <h3>Conteúdo aprendido</h3>
