--- a/index.html
+++ b/index.html
@@ -21,14 +21,6 @@
                 </ul>
             </nav>
         </header>
-        <h2>Uma passagem</h2>
-        <aside class="lado-direito">
-            <p>Quando estavamos estudando sobre HTML & CSS, não consegui entender de primeira o conteúdo de seletores e posicionamento, em parte porque tive problemas para acompanhar o conteúdo no dia. Agora, pude revisitar esse conteúdo, e consegui aprender de maneira satisfatória.</p>
-        </aside>
-        <article class="lado-esquerdo">
-            <h2>Minha história na Trybe</h2>
-            <p>Comecei os estudos no dia 09/11/2020. Enquanto escrevo esse parágrafo, se passaram um mês e meio. De lá pra cá, aprendi coisas que sequer imaginaria possíveis aprender em tão pouco tempo. Aprendi a mexer com linux (que sempre tive interesse, mas nunca conseguia entrar de cabeça), também aprendi a mexer com HTML e CSS (linguagem que eu nunca havia trabalhado), e também revi conteúdos sobre JavaScript e linguagem de programação.</p>
-        </article>
         <div id="informacoes">
             <h3> Julio H. Thosi</h3>
             <img src="images/profile-picture.jpeg" alt="Foto de Julio H. Thosi" id="minha_foto" width="150px">
@@ -52,6 +44,14 @@
                 </tr>
             </table>
         </div>
+        <aside class="lado-direito">
+            <h2>Minha</h2>
+            <p>Quando estavamos estudando sobre HTML & CSS, não consegui entender de primeira o conteúdo de seletores e posicionamento, em parte porque tive problemas para acompanhar o conteúdo no dia. Agora, pude revisitar esse conteúdo, e consegui aprender de maneira satisfatória.</p>
+        </aside>
+        <article class="lado-esquerdo">
+            <h2>Minha história na Trybe</h2>
+            <p>Comecei os estudos no dia 09/11/2020. Enquanto escrevo esse parágrafo, se passaram um mês e meio. De lá pra cá, aprendi coisas que sequer imaginaria possíveis aprender em tão pouco tempo. Aprendi a mexer com linux (que sempre tive interesse, mas nunca conseguia entrar de cabeça), também aprendi a mexer com HTML e CSS (linguagem que eu nunca havia trabalhado), e também revi conteúdos sobre JavaScript e linguagem de programação.</p>
+        </article>
         <section id="tabelas">
         <ol id="licoes_aprendidas">
             <h3>Conteúdo aprendido</h3>
@@ -67,7 +67,7 @@
             <li>HTML Semântico</li>
         </ol>
         <ul id="licoes_a_aprender">
-            <h3>Conteúdo a aprender</h3>
+            <h4>Conteúdo a aprender</h4>
             <li>Javascript</li>
             <li>Array e Loop For</li>
             <li>Logica de Programacao</li>
