--- a/index.html
+++ b/index.html
@@ -45,16 +45,14 @@
             </table>
         </div>
         <aside class="lado-direito">
-            <h2>Minha</h2>
-            <p>Quando estavamos estudando sobre HTML & CSS, não consegui entender de primeira o conteúdo de seletores e posicionamento, em parte porque tive problemas para acompanhar o conteúdo no dia. Agora, pude revisitar esse conteúdo, e consegui aprender de maneira satisfatória.</p>
+            <p><strong>Passagem sobre aprendizado:</strong> estavamos estudando sobre HTML & CSS, não consegui entender de primeira o conteúdo de seletores e posicionamento, em parte porque tive problemas para acompanhar o conteúdo no dia. Agora, pude revisitar esse conteúdo, e consegui aprender de maneira satisfatória.</p>
         </aside>
         <article class="lado-esquerdo">
-            <h2>Minha história na Trybe</h2>
-            <p>Comecei os estudos no dia 09/11/2020. Enquanto escrevo esse parágrafo, se passaram um mês e meio. De lá pra cá, aprendi coisas que sequer imaginaria possíveis aprender em tão pouco tempo. Aprendi a mexer com linux (que sempre tive interesse, mas nunca conseguia entrar de cabeça), também aprendi a mexer com HTML e CSS (linguagem que eu nunca havia trabalhado), e também revi conteúdos sobre JavaScript e linguagem de programação.</p>
+            <p><strong>Minha história na Trybe:</strong> Comecei os estudos no dia 09/11/2020. Enquanto escrevo esse parágrafo, se passaram um mês e meio. De lá pra cá, aprendi coisas que sequer imaginaria possíveis aprender em tão pouco tempo. Aprendi a mexer com linux (que sempre tive interesse, mas nunca conseguia entrar de cabeça), também aprendi a mexer com HTML e CSS (linguagem que eu nunca havia trabalhado), e também revi conteúdos sobre JavaScript e linguagem de programação.</p>
         </article>
         <section id="tabelas">
         <ol id="licoes_aprendidas">
-            <h3>Conteúdo aprendido</h3>
+            <h4>Conteúdo aprendido</h4>
             <li>Unix</li>
             <li>Bash</li>
             <li>Shell</li>
