criando menu de navegacao

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <h2 id="index">Índice</h2>
             <nav id="menu-navegacao">
                 <ul>
-                    <li>Menu</li>
-                    <li>Menu</li>
-                    <li>Menu</li>
-                    <li>Menu</li>
+                    <li><a href="#informacoes">Informações</a></li>
+                    <li><a href="#lado-direito">Histórias do Curso</a></li>
+                    <li><a href="#licoes_aprendidas">Lista de aprendizados</a></li>
+                    <li><a href="#rodape">Siga-Me</a></li>
                 </ul>
             </nav>
         </header>
