--- a/index.html
+++ b/index.html
@@ -14,6 +14,41 @@
   </header>
 
   <main>
+    <table id="licoes">
+      <tr>
+        <td>
+          <h2>Lições aprendidas</h2>
+          <ol id="licoes_aprendidas">
+            <li>Unix</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>Empatia</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Slack</li>
+            <li>Zoom</li>
+            <li>Inspect</li>
+            <li>Semantic HTML</li>
+          </ol>
+        </td>
+        <td>
+          <h2>Lições a aprender</h2>
+          <ul id="licoes_a_aprender">
+            <li>JavaScript</li>
+            <li>DOM</li>
+            <li>Forms</li>
+            <li>CSS Responsive</li>
+            <li>ES6</li>
+            <li>HOF</li>
+            <li>Unit Tests</li>
+            <li>React</li>
+            <li>Node</li>
+            <li>SQL</li>
+          </ul>
+        </td>
+      </tr>
+    </table>
+
     <section id="artigo" class="lado-esquerdo">
       <article>
         <p>
@@ -29,49 +64,6 @@
         </p>
       </aside>
     </section>
-
-    <section id="licoes">
-      <h2>Lições aprendidas</h2>
-      <ol id="licoes_aprendidas">
-        <li>Unix</li>
-        <li>Git</li>
-        <li>GitHub</li>
-        <li>Empatia</li>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Slack</li>
-        <li>Zoom</li>
-        <li>Inspect</li>
-        <li>Semantic HTML</li>
-      </ol>
-
-      <h2>Lições a aprender</h2>
-      <ul id="licoes_a_aprender">
-        <li>JavaScript</li>
-        <li>DOM</li>
-        <li>Forms</li>
-        <li>CSS Responsive</li>
-        <li>ES6</li>
-        <li>HOF</li>
-        <li>Unit Tests</li>
-        <li>React</li>
-        <li>Node</li>
-        <li>SQL</li>
-      </ul>
-    </section>
-
-    <table id="tabela">
-      <tr>
-        <td>item1</td>
-        <td>item2</td>
-        <td>item3</td>
-      </tr>
-      <tr>
-        <td>item4</td>
-        <td>item5</td>
-        <td>item6</td>
-      </tr>
-    </table>
   </main>
 
   <footer id="rodape">
@@ -79,6 +71,5 @@
       <a href="https://www.betrybe.com/" target="_blank">#beTrybe</a>
     </nav>
   </footer>
-
 </body>
 </html>
