--- a/index.html
+++ b/index.html
@@ -56,27 +56,21 @@
 
   </section>
 
-  <article id="meu_aprendizado">
-    <section>
-      <h3>Experiências</h3>
-      <p>Este é o primeiro projeto que faço, como aluno da Trybe e estou muito feliz com o resultado, até agora. Para realização dessa atividade, foi necessário aprender conceitos básicos de Unix & Bash, Internet, Git & GitHub, HTML Semântico e CSS. Exercendo o método de ensino proposto pela Trybe, pude aprimorar, não apenas minhas habilidades técnicas, mas também posso afirmar: estou <strong>aprendendo</strong> a aprender. Sinto que evoluí <strong>bastante</strong> desde o meu primeiro dia e estou mais do que preparado para seguir adiante!</p>
-    </section>
+  <article class="lado-esquerdo" id="meu_aprendizado">
+    <h3>Experiências</h3>
+    <p>Este é o primeiro projeto que faço, como aluno da Trybe e estou muito feliz com o resultado, até agora. Para realização dessa atividade, foi necessário aprender conceitos básicos de Unix & Bash, Internet, Git & GitHub, HTML Semântico e CSS. Exercendo o método de ensino proposto pela Trybe, pude aprimorar, não apenas minhas habilidades técnicas, mas também posso afirmar: estou <strong>aprendendo</strong> a aprender. Sinto que evoluí <strong>bastante</strong> desde o meu primeiro dia e estou mais do que preparado para seguir adiante!</p>
   </article>
 
-  <aside id="passagem_de_aprendizado">
-    <section>
-      <h3>A estrada até agora</h3>
-      <p>Parece que tudo começou ontem e o primeiro projeto já está <strong>PRONTO!</strong>Não foi fácil, deixamos alguns pratos caírem, mas conseguimos! É uma honra fazer parte dessa equipe.<strong> AVANTE TURMA 09!</strong>
-      </p>
-    </section>
+  <aside class="lado-direito" id="passagem_de_aprendizado">
+    <h3>A estrada até agora</h3>
+    <p>Parece que tudo começou ontem e o primeiro projeto já está <strong>PRONTO!</strong>Não foi fácil, deixamos alguns pratos caírem, mas conseguimos! É uma honra fazer parte dessa equipe.<strong> AVANTE TURMA 09!</strong>
+    </p>
   </aside>
 
   <footer id="rodape">
-    <table id="contato">
-      <tr>
-        <td><a href="https://github.com/qu4k3r" target="_blank">Autor: Lucas Neves</a></td>
-      </tr>
-    </table>
+    <div id="contato">
+      <span class="contato"><a href="https://github.com/qu4k3r" target="_blank">Autor: Lucas Neves</a></span>
+    </div>
   </footer>
 </body>
 </html>
