--- a/index.html
+++ b/index.html
@@ -1,70 +1,90 @@
 <!DOCTYPE html>
 <html lang="br">
-<head>
-    <meta charset="UTF-8">
-    <title>Lições Trybe</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
- <header id="cabecalho">
-        <h1 id="titulo">Lições Aprendidas - Trybe</h1>
-        <nav>
-            <a href="#cabecalho">Home</a>
-            <a href="#main">Main</a>
-            <a href="#rodape">About</a>
-        </nav>
- </header>
- <main id="conteudo_principal">
-        <article id="article_meuaprendizado">
-            <header>
-                <h2>O meu aprendizado na Trybe</h2>
-            </header>
-            <p>Muito alem de adquirir uma nova habilidade o aprendizado na Trybe proporciona um modelo de formação inovador e disruptivo.
+    <head>
+        <meta charset="UTF-8">
+        <title>Lições Trybe</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <header id="cabecalho">
+            <h1 id="titulo">Lições Aprendidas - Trybe</h1>
+            <nav>
+                <a href="#cabecalho">Home</a>
+                <a href="#main">Main</a>
+                <a href="#rodape">About</a>
+            </nav>
+        </header>
+        <main id="conteudo_principal">
+            <article id="article_meuaprendizado">
+                <header>
+                    <h2>O meu aprendizado na Trybe</h2>
+                </header>
+                <p>Muito alem de adquirir uma nova habilidade o aprendizado na Trybe proporciona um modelo de formação inovador e disruptivo.
                 São rotinas que impulsionam o ânimo turma, tornam o estudo algo muito mais prazeroso e que geram resultados incríveis.
                 Essa metodologia nos coloca como protagonistas e responsáveis por nosso próprio aprendizado, uma educação ativa que acontece
                 através de diversos exercícios, projetos, dinâmicas e muitos outros formatos.</p>
-        </article>
-        <section>
-            <div class="lista_licoes" id="apredidas">
-            <h3>Lições aprendidas</h3>
-            <ol id="licoes_aprendidas">
-                <li>Unix</li>
-                <li>Shell</li>
-                <li>Bash</li>
-                <li>Git</li>
-                <li>GitHub</li>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>Slack</li>
-                <li>Zoom</li>
-                <li>Semantic HTML</li>
-            </ol>
-        </div>
-        <div class="lista_licoes" id="aprender">
-            <h3>Lições para aprender</h3>
-            <ul id="licoes_a_aprender">
-                <li>JavaScript</li>
-                <li>DOM</li>
-                <li>Web Storage</li>
-                <li>CSS Flexbox</li>
-                <li>CSS Responsivo</li>
-                <li>Jest</li>
-                <li>React</li>
-                <li>NodeJS</li>
-                <li>Deployment</li>
-                <li>Python</li>
-            </ul>
-        </div>
+            </article>
+            <section>
+                <div class="lista_licoes" id="apredidas">
+                    <table>
+                        <tr>
+                            <th>
+                                <h3>Lições aprendidas</h3>
+                            </th>
+                        </tr>
+                        <tr>
+                            <td>
+                                <ol id="licoes_aprendidas">
+                                    <li>Unix</li>
+                                    <li>Shell</li>
+                                    <li>Bash</li>
+                                    <li>Git</li>
+                                    <li>GitHub</li>
+                                    <li>HTML</li>
+                                    <li>CSS</li>
+                                    <li>Slack</li>
+                                    <li>Zoom</li>
+                                    <li>Semantic HTML</li>
+                                </ol>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="lista_licoes" id="aprender">
+                    <table>
+                        <tr>
+                            <th>
+                                <h3>Lições para aprender</h3>
+                            </th>
+                        </tr>
+                        <tr>
+                            <td>
+                                <ul id="licoes_a_aprender">
+                                    <li>JavaScript</li>
+                                    <li>DOM</li>
+                                    <li>Web Storage</li>
+                                    <li>CSS Flexbox</li>
+                                    <li>CSS Responsivo</li>
+                                    <li>Jest</li>
+                                    <li>React</li>
+                                    <li>NodeJS</li>
+                                    <li>Deployment</li>
+                                    <li>Python</li>
+                                </ul>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </section>
+        </main>
+        <section id="conteudo_extra">
+            <aside id="licoes">
+                <p><strong>A Empatia: </strong> no ambiente corporativo, saber projetar a personalidade de alguém para que seja possível se identificar com o outro e compreender o que este pensa e sente é uma virtude que contribui com a gestão de equipes e influencia positivamente o clima organizacional.</p>
+            </aside>
         </section>
- </main>
- <section id="conteudo_extra">
-        <aside id="licoes">
-            <p><strong>A Empatia: </strong> no ambiente corporativo, saber projetar a personalidade de alguém para que seja possível se identificar com o outro e compreender o que este pensa e sente é uma virtude que contribui com a gestão de equipes e influencia positivamente o clima organizacional.</p>
-        </aside>
- </section>
- <footer id="rodape">
-        <p>Project Lessons Learned - Desenvolvido por <a href="https://www.linkedin.com/in/micaelaalves/" target="_blank">Micaela Alves</a> </p>
-        <img id="minha_foto" src="minha_foto.jpeg" alt="Foto de Micaela">
- </footer>
-</body>
+        <footer id="rodape">
+            <p>Project Lessons Learned - Desenvolvido por <a href="https://www.linkedin.com/in/micaelaalves/" target="_blank">Micaela Alves</a> </p>
+            <img id="minha_foto" src="minha_foto.jpeg" alt="Foto de Micaela">
+        </footer>
+    </body>
 </html>
