--- a/index.html
+++ b/index.html
@@ -59,15 +59,13 @@
         </section>
     </section>
     <section id="coments">
-        <div class="list">
-            <article>
+        <div>
+            <article class="left-Side"> 
                 <h3 class="font-verde">Sobre o meu aprendizado</h3>
                 <p>O Curso tem proporcionado ótimas experiencias para mim e acredito que para todos os alunos da turma 9, estou impressionado com a qualidade de ensino e o suporte ao aluno que a trybe oferece e entrega, o fato de tratar com respeito questões ligadas a saúde fisica e mental dos alunos.
                 </p>
             </article>
-        </div>
-        <div class="list">
-            <aside>
+            <aside class="right-Side">
                 <h3 class="font-verde">Uma passagem sobre meu aprendizado</h3>
                 <p class="font-verde"><em>"Durante este primeiro mes de aprendizado, tive ótimas experiencias, uma delas foi conhecer e poder conversar com outros alunos durante as salas reduzidas, onde conheci pessoas que me inspiraram a fazer mais pelo próximo"
                 </em></p>
