--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </ul>
         </section>
     </section>
-    <section id="coments">
+    <section>
         <div>
             <article class="left-Side"> 
                 <h3 class="font-verde">Sobre o meu aprendizado</h3>
