--- a/index.html
+++ b/index.html
@@ -23,7 +23,21 @@
 <body>
     <section id="perfil">
         <img id="minha_foto" src="2019-05-27.png" alt="Minha Foto">
-        <p><em>José Luiz Fagundes<br>Estudante Trybe</em></p>
+        <p><em>Estudante Trybe</em></p>
+
+        <br>    
+        
+            <table class="center-Inline">
+                <tr>
+                    <th>Nome:   </th>
+                    <td>José Luiz Fagundes</td>
+                </tr>
+                <tr>
+                    <th>Idade:  </th>
+                    <td>38 anos</td>
+                </tr>                
+            </table>
+
     </section>
     <section id="listas">
         <Section class="list">
